--- a/about.html
+++ b/about.html
@@ -53,8 +53,8 @@
                 팔마랜드
             </div>
             <div class="footer-info">
-                <p>(주)팔마랜드 | 대표: 홍길동 | 사업자등록번호: 123-45-67890</p>
-                <p>주소: 경기도 여주시 명품로 308-26 | 연락처: 031-886-8885</p>
+                <p>(주)팔마랜드 | 대표: 송연재 | 사업자등록번호: 123-45-67890</p>
+                <p>주소: 경기도 여주시 명품로 308-26 | 연락처: 031-886-8885, 031-882-8815~8817 담당자: 010-5556-0109, 010-2296-6419</p>
                 <p class="copyright">&copy; 2025 Palma Land. All Rights Reserved.</p>
             </div>
             <div class="footer-social">
